tests/snapshots/run_wpt_conformance__coreml_tanh_float16_1D_constant_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
tanh.https.any.js tanh float16 1D constant tensor, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '<coreml-temp-model>' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([121, 69, 157, 188, 133, 54, 82, 63, 189, 65, 146, 196, 38, 68, 17, 196, 109, 195, 67, 59, 24, 175, 245, 69, 34, 63, 6, 68, 150, 69, 72, 197, 169, 61, 181, 197, 199, 189, 167, 191, 128, 65, 240, 185, 219, 68, 13, 186]);
  }

  nodes {
    [tanhOutput] = tanh(operand_0, label="");
  }

  outputs { tanhOutput; }
}
