tests/snapshots/run_wpt_conformance__coreml_tanh_float16_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "tanh.https.any.js",
    "tanh float16 4D tensor",
    "coreml",
    "PASS",
)
